# src/common/exceptions/BadRequestException.ts
@@ -1,0 +1,11 @@
+import httpStatus from 'http-status';
+import { Exception } from './Exception';
+
+export class BadRequestException extends Exception {
+  constructor(message?: string) {
+    super();
+
+    this.statusCode = httpStatus.BAD_REQUEST;
+    this.message = message || (httpStatus[this.statusCode] as string);
+  }
+}
