# src/middlewares/error-handler.ts
@@ -1,10 +1,10 @@
-import { ErrorResponsePayload } from '../common/error-response-payload';
-import { Exception } from '../exceptions/Exception';
-import { ErrorRequestHandler, RequestHandler } from 'express';
+import { ErrorResponsePayload } from '../common/responses/error-response-payload';
+import { Exception } from '../common/exceptions/Exception';
+import { ErrorRequestHandler, NextFunction } from 'express';
 
-export const errorHandler: ErrorRequestHandler = (err: Error | Exception, req, res, next) => {
-  let response = new ErrorResponsePayload(err);
+// eslint-disable-next-line @typescript-eslint/no-unused-vars
+export const errorHandler: ErrorRequestHandler = (err: Error | Exception, req, res, next: NextFunction) => {
+  const response = new ErrorResponsePayload(err);
 
-  // 에러 응답 로깅 추가
-  res.status(response.statusCode).send(response);
+  res.status(response.data.statusCode).send(response);
 };
